// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`license config > defaultLicenseConfig > should generate default license config for ASL 1`] = `
{
  "copyrightHolder": "Test Inc. or its affiliates",
  "header": {
    "content": {
      "lines": [
        "Copyright Test Inc. or its affiliates. All Rights Reserved.                                                      ",
        "                                                                                                                 ",
        "Licensed under the Amazon Software License (the "License"). You may not use this file except in compliance       ",
        "with the License. A copy of the License is located at                                                            ",
        "                                                                                                                 ",
        "   https://aws.amazon.com/asl/                                                                                   ",
        "                                                                                                                 ",
        "or in the "license" file accompanying this file. This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES",
        "OR CONDITIONS OF ANY KIND, express or implied. See the License for the specific language governing permissions   ",
        "and limitations under the License.                                                                               ",
      ],
    },
    "exclude": [
      "**/*.gen.*",
    ],
    "format": {
      "**/*.{js,ts,jsx,tsx,mjs,mts}": {
        "blockEnd": " **********************************************************************************************************************/",
        "blockStart": "/**********************************************************************************************************************",
        "lineEnd": " *",
        "lineStart": " *  ",
      },
      "**/*.{py,sh,tf}": {
        "blockEnd": "######################################################################################################################",
        "blockStart": "######################################################################################################################",
        "lineEnd": " #",
        "lineStart": "#  ",
      },
    },
  },
  "spdx": "ASL",
}
`;

exports[`license config > defaultLicenseConfig > should generate default license config for Apache-2.0 1`] = `
{
  "copyrightHolder": "Test Inc. or its affiliates",
  "header": {
    "content": {
      "lines": [
        "Copyright Test Inc. or its affiliates. All Rights Reserved.",
        "SPDX-License-Identifier: Apache-2.0",
      ],
    },
    "exclude": [
      "**/*.gen.*",
    ],
    "format": {
      "**/*.{js,ts,jsx,tsx,mjs,mts}": {
        "blockEnd": " */",
        "blockStart": "/**",
        "lineStart": " * ",
      },
      "**/*.{py,sh,tf}": {
        "blockEnd": "#",
        "blockStart": "#",
        "lineStart": "# ",
      },
    },
  },
  "spdx": "Apache-2.0",
}
`;

exports[`license config > defaultLicenseConfig > should generate default license config for MIT 1`] = `
{
  "copyrightHolder": "Test Inc. or its affiliates",
  "copyrightYear": 2025,
  "header": {
    "content": {
      "lines": [
        "Copyright Test Inc. or its affiliates. All Rights Reserved.",
        "SPDX-License-Identifier: MIT",
      ],
    },
    "exclude": [
      "**/*.gen.*",
    ],
    "format": {
      "**/*.{js,ts,jsx,tsx,mjs,mts}": {
        "blockEnd": " */",
        "blockStart": "/**",
        "lineStart": " * ",
      },
      "**/*.{py,sh,tf}": {
        "blockEnd": "#",
        "blockStart": "#",
        "lineStart": "# ",
      },
    },
  },
  "spdx": "MIT",
}
`;

exports[`license config > dependency check config writes > ensureDependencyCheckBlock > should add a dependencies block to a license config 1`] = `
"import {
  DEFAULT_LICENSE_ALLOWLIST,
  npmCollector,
} from '@aws/nx-plugin/sdk/license';
import { AwsNxPluginConfig } from '@aws/nx-plugin';

export default {
  license: {
    dependencies: {
      allow: DEFAULT_LICENSE_ALLOWLIST,
      collectors: [npmCollector()],
      exceptions: [],
    },
    source: {
      spdx: 'Apache-2.0',
      copyrightHolder: 'Test',
    },
  },
} satisfies AwsNxPluginConfig;
"
`;
